# vk-playground

./: .gitignore  CMakeLists.txt  vcpkg.json
docs/: CPP_MODERNIZATION_PLAN.md  VALIDATION_ERRORS_FIX_04_04_2026.md  VULKAN_MODERNIZATION_PLAN.md
shaders/: basic.frag  basic.slang  basic.vert  basic_frag.slang  basic_vert.slang  colored_triangle.slang  colored_triangle_frag.slang  colored_triangle_mesh.slang  colored_triangle_mesh_vert.slang  colored_triangle_vert.slang  default_lit.slang  default_lit_frag.slang  funky_triangle.slang  funky_triangle_frag.slang  gradient_color_comp.slang  gradient_comp.slang  input_structures.slang  mesh.slang  mesh_frag.slang  mesh_pbr.slang  mesh_pbr_frag.slang  mesh_vert.slang  pbr_header.slang  scene_data.slang  screen_texture.frag  screen_texture.slang  screen_texture.vert  screen_texture_frag.slang  screen_texture_vert.slang  sky_comp.slang  tex_image.slang  tex_image_frag.slang  textured_lit.slang  textured_lit_frag.slang  tri_mesh.slang  tri_mesh_descriptors.slang  tri_mesh_descriptors_vert.slang  tri_mesh_pushconstants.slang  tri_mesh_pushconstants_vert.slang  tri_mesh_ssbo.slang  (+5 more)
shared/: vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h  vk_loader.cpp  vk_loader.h
src/app/: application.cpp  application.h  ui.cpp  ui.h
src/model/: model.cpp  model.h
src/utils/: util.cpp  util.h
